#ifndef SMARTRADAR_SCANNER_H
#define SMARTRADAR_SCANNER_H

namespace smartradar
{
    class Scanner
    {
        
    };
}

#endif